<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.user.notficationmanager.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="220dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/countdown"

            android:hint="23:59"
            android:gravity="center"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_gravity="center"
            android:editable="false"
            android:clickable="false"
            android:focusable="false"
            android:textSize="36sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:id="@+id/dateLayout"
            android:layout_marginTop="5dp"
            android:layout_weight="0.02">

            <EditText
                android:focusable="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/begin"
                android:hint="0:00"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical|center_horizontal" />

            <EditText
                android:focusable="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/end"
                android:layout_weight="1"
                android:hint="23.59"
                android:gravity="center_vertical|center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.04">

            <ToggleButton
                android:text="@string/short_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/monday"
                android:layout_weight="1"
                android:onClick="buttonOnClicked"
                android:textOff="@string/short_monday"
                android:textOn="@string/short_monday" />

            <ToggleButton
                android:text="@string/short_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tuesday"
                android:layout_weight="1"
                android:onClick="buttonOnClicked"
                android:textOff="@string/short_tuesday"
                android:textOn="@string/short_tuesday" />

            <ToggleButton
                android:text="@string/short_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wednesday"
                android:layout_weight="1"
                android:onClick="buttonOnClicked"
                android:textOff="@string/short_wednesday"
                android:textOn="@string/short_wednesday" />

            <ToggleButton
                android:text="@string/short_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/thursday"
                android:layout_weight="1"
                android:onClick="buttonOnClicked"
                android:textOff="@string/short_thursday"
                android:textOn="@string/short_thursday" />

            <ToggleButton
                android:text="@string/short_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/friday"
                android:layout_weight="1"
                android:onClick="buttonOnClicked"
                android:textOff="@string/short_friday"
                android:textOn="@string/short_friday" />

            <ToggleButton
                android:text="@string/short_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saturday"
                android:layout_weight="1"
                android:onClick="buttonOnClicked"
                android:textOff="@string/short_saturday"
                android:textOn="@string/short_saturday" />

            <ToggleButton
                android:text="@string/short_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sunday"
                android:layout_weight="1"
                android:onClick="buttonOnClicked"
                android:textOff="@string/short_sunday"
                android:textOn="@string/short_sunday" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/delay_now"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:id="@+id/delay_now"
        android:layout_marginTop="30dp"
        android:onClick="showPopup" />

    <ToggleButton
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:id="@+id/enable"
        android:onClick="buttonOnClicked"
        android:textOff="@string/enable_delay"
        android:textOn="@string/disable_delay" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_survey"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:text="@string/please_answer_survey" />
</LinearLayout>
